package $1_where.$2_system_logic.$1_on_query.domain

case class ContractId(value: String)
