@startuml

package domain {
  enum Status {
    Confirming, Using, Stopping, Ended
    + {static} Status create(String)
  }
  class ContractId {
    - String
  }
  interface ContractRepository {
    Status status(ContractId)
  }

  ContractRepository --> ContractId
  ContractRepository -right-> Status
}

package table {
  class ContractRepositoryTable {
    Status status(ContractId)
  }
}

object database

ContractRepositoryTable -down-|> ContractRepository
ContractRepositoryTable -up-> database : select case when xxx -> 1, when xxx -> 2,,, from ...
ContractRepositoryTable --> Status : 1 => Confirming, 2 => Using,,,

@enduml